# esp-parser

./: .gitignore  CLAUDE.md  KOELL_ZOHO_FIELD_MAPPING_QUESTIONS.md  README.md  ZOHO_ITEM_MASTER_EXAMPLES.md  calculator_generator.py  config.py  esp_parser.py  esp_presentation_downloader.py  esp_product_lookup.py  main_agent.py  orchestrator.py  output_normalizer.py  pdf_processor.py  presentation_parser.py  prompt.py  prompt_presentation.py  pyproject.toml  requirements.txt  s3_handler.py  sage_handler.py  unified_schema.py  zoho_client.py  zoho_config.py  zoho_data_transformer.py  zoho_item_agent.py  zoho_quote_agent.py
email_trigger/: .env.example  email_watcher.py  processed_emails.txt
frontend/: middleware.ts  package-lock.json  package.json
output/: Client Promo Calc 2025.xlsx  Client Promo Calc 20250113_143022.xlsx  Client Promo Calc 20250114_200000.xlsx  ESP Wine Bottle Calc 2025.xlsx  SAGE Promo Products Calc 2025.xlsx  esp_output_20251203_173533.json  esp_output_20251203_174412.json  esp_output_20251203_180210.json  esp_output_20251203_180751.json  esp_output_20251203_182452.json  esp_output_20251203_200210.json  esp_output_20251203_201002.json  esp_output_20251203_202049.json  esp_output_20251203_204035.json  esp_output_20251203_212012.json  esp_output_20251203_221252.json  esp_output_20251204_000108.json  esp_unified.json  job_esp_20251212_162345_state.json  job_esp_20251212_162345_thoughts.jsonl  job_esp_20251212_162701_state.json  job_esp_20251212_162701_thoughts.jsonl  job_esp_20251212_163052_state.json  job_esp_20251212_163052_thoughts.jsonl  job_esp_20251212_163142_state.json  job_esp_20251212_163142_thoughts.jsonl  job_esp_20251212_163744_state.json  job_esp_20251212_163744_thoughts.jsonl  job_esp_20251212_195719_state.json  job_esp_20251212_195719_thoughts.jsonl  job_esp_20251212_210912_state.json  job_esp_20251212_210912_thoughts.jsonl  job_esp_20251212_210930_state.json  job_esp_20251212_210930_thoughts.jsonl  job_esp_20251212_211315_state.json  (+118 more)
tests/: __init__.py  (+1 more)
(+67 files in other folders)
